[gd_scene load_steps=4 format=3 uid="uid://daw2j8ghd6dlh"]

[ext_resource type="Script" path="res://src/entities/player/defense_angel.gd" id="1_kj1xo"]
[ext_resource type="Texture2D" uid="uid://noo8sl88vp8t" path="res://assets/textures/player/angel.png" id="1_v84i1"]
[ext_resource type="PackedScene" uid="uid://c0nund8urr35h" path="res://src/entities/player/shock_wave.tscn" id="2_sydh4"]

[node name="DefenseAngel" type="Node2D"]
script = ExtResource("1_kj1xo")
angel_shock_wave_scene = ExtResource("2_sydh4")

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="Body" type="Sprite2D" parent="."]
modulate = Color(0.85098, 1, 0.317647, 0.690196)
self_modulate = Color(1, 0.913725, 0.278431, 1)
position = Vector2(-1.06581e-14, -10)
rotation = -1.5708
scale = Vector2(0.45, 0.45)
texture = ExtResource("1_v84i1")

[node name="AngelAttackSound" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0, -9)

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
